[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day_1_1"
path = "src/day_1/part_1/part_1.rs"

[[bin]]
name = "day_1_2"
path = "src/day_1/part_2/part_2.rs"

[[bin]]
name = "day_2_1"
path = "src/day_2/part_1/part_1.rs"

[[bin]]
name = "day_2_2"
path = "src/day_2/part_2/part_2.rs"

[[bin]]
name = "day_3_1"
path = "src/day_3/part_1/part_1.rs"
